# weather-oxide

./: .gitignore  Cargo.toml  Dockerfile.gha  config.template.hcl  token
.github/workflows/: build.yaml  build_reusable.yaml
examples/: docker-compose.yaml
src/: cli.rs  client.rs  data.rs  main.rs
