[package]
name = "weather-oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive", "env"] }
csv = "1.2.1"
log = "0.4"
openweathermap_client = "0.1.1"
pretty_env_logger = "0.4"
# thiserror = "1.0.40"
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
